--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
             <p>Marina de Vila Franca do Campo,<br>Vila Franca do Campo,<br>
                 São Miguel, Azores Portugal</p>
         </div>
+
+        <hr class="hrFooter desktopNone">
         <div>
             <h1 class="bold">Contactos</h1>
             <p class="medium">Geral</p>
