--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                             transform="translate(-4418.277 -30.946)" fill="#fff" />
                     </g>
                     <path id="Autocolantes" d="M0,0H325.6V325.6H0Z"
-                        transform="translate(-3102.742 1905.211) rotate(-20)" fill="url(#pattern)" />
+                        transform="translate(-3102.742 1905.211) rotate(-20)" fill="url(#pattern)" onclick="window.location.href='https://www.waterandwind.eu/'" 
+                        style="cursor: pointer;" />
                     <path id="Untitled-1-03" d="M0,0H133V133H0Z" transform="translate(-2713.372 1944)"
                         fill="url(#pattern-2)" />
                 </g>
